--- a/styles/style.css
+++ b/styles/style.css
@@ -46,11 +46,39 @@ body {
 }
 section {
   border: 1px solid white;
-  padding: 10px;
-  max-width: 50%;
+  padding: 20px;
+  width: 400px;
 }
 
-/* form label input {
-  display: block;
-  margin-left: 40px;
-} */
+.inputDiv {
+  display: flex;
+  align-items: center;
+}
+.inputDiv label {
+  width: 20%;
+}
+.inputDiv .inner-div {
+  width: 80%;
+  display: flex;
+}
+.inner-div {
+  position: relative;
+  margin: 7px 0;
+}
+.inner-div i {
+  color: red;
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  font-size: 20px;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+}
+.inner-div input {
+  width: 100%;
+  padding: 10px;
+  padding-left: 40px;
+}
