--- a/styles/style.css
+++ b/styles/style.css
@@ -47,26 +47,28 @@ body {
 section {
   border: 1px solid white;
   padding: 20px;
-  width: 400px;
+  width: 450px;
 }
-
+.title {
+  margin-top: 60px;
+  margin-bottom: 20px;
+}
 .inputDiv {
   display: flex;
   align-items: center;
 }
 .inputDiv label {
-  width: 20%;
-}
-.inputDiv .inner-div {
-  width: 80%;
-  display: flex;
+  width: 23%;
 }
 .inner-div {
+  width: 80%;
+  display: flex;
   position: relative;
   margin: 7px 0;
 }
+
 .inner-div i {
-  color: red;
+  color: rgb(77, 66, 66);
   position: absolute;
   left: 10px;
   top: 50%;
@@ -77,8 +79,45 @@ section {
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
 }
+
 .inner-div input {
   width: 100%;
   padding: 10px;
   padding-left: 40px;
+  border: none;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.inner-div select {
+  width: 30%;
+  margin-left: 5px;
+  border: none;
+  border-radius: 5px;
+}
+.checkboxDiv {
+  display: flex;
+  align-items: flex-start;
+  margin: 10px 0;
+}
+.checkboxDiv label {
+  width: 23%;
+}
+.chebox-input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.checkbox-item {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.checkbox-item input {
+  border: none;
+  border-radius: 5px;
 }
